--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "cd khohav && vite",
+    "build": "cd khohav && vite build",
+    "preview": "cd khohav && vite preview"
   },
   "dependencies": {
     "pinia": "^3.0.3",
